# bumperbot_odometry_and_control

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumberbot_msgs/share/bumberbot_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bumperbot_bringup/share/bumperbot_bringup/: package.sh
install/bumperbot_controller/share/bumperbot_controller/: local_setup.sh  package.sh
install/bumperbot_cpp_examples/lib/bumperbot_cpp_examples/: simple_publisher1
install/bumperbot_cpp_examples/share/bumperbot_cpp_examples/: package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/: local_setup.sh  package.sh  package.xml
install/joy_teleop/share/joy_teleop/: package.sh
log/: latest_build
src/bumperbot_bringup/: CMakeLists.txt
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/config/: joy_teleop.yaml
src/bumperbot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
src/bumperbot_cpp_examples/: CMakeLists.txt
src/bumperbot_cpp_examples/src/: simple_publisher.cpp  simple_subscriber.cpp
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro
src/bumperbot_firmware/: CMakeLists.txt
src/bumperbot_firmware/launch/: hardware_interface.launch.py
src/bumperbot_localization/: CMakeLists.txt
src/bumperbot_msgs/: CMakeLists.txt
src/bumperbot_py_examples/: setup.py
src/bumperbot_py_examples/bumperbot_py_examples/: simple_service_server.py  simple_turtlesim_kinematics.py
(+61 files in other folders)
